fix spacing issue on my jobs page

--- a/schmodel-registration-frontend/src/app/pages/my-jobs/sch-job-row/sch-job-row.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/my-jobs/sch-job-row/sch-job-row.component.scss
@@ -5,7 +5,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 30px 10px 30px;
+    padding: 12px 15px 10px 15px;
     line-height: 1.2;
     background-image: url('/assets/images/bg_row.png');
     background-repeat: no-repeat;
@@ -94,7 +94,6 @@ header {
     }
 
     .workschedule-wrapper {
-        width: 75%;
         padding-bottom: 10px;
         font-family: "Open Sans";
         font-size: 9px;
@@ -112,11 +111,6 @@ header {
             font-weight: 700;
             padding-right: 0;
         }
-
-        .workschedule {
-            padding-right: 0;
-            width: 100%;
-        }
     }
 
     .pay-rate-wrapper {
@@ -129,6 +123,7 @@ header {
 
         .pay-rate-title {
             padding-top: 10px;
+            padding-right: 0px;
             font-size: 8px;
             font-weight: 700;
             color: gray;
